Move to how static and shared libs are generated and controlled

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -15,11 +15,16 @@ include(InstallRequiredSystemLibraries)
 
 set(CMAKE_POSITION_INDEPENDENT_CODE ON)
 
+# Build options
+option(BUILD_SHARED_LIBS "Build using shared libraries" ON)
+option(BUILD_LIBSRCML "Build (and potentially install) libsrcml" ON)
 
 # Exeternally defined compile and link options
 add_compile_options("${SRCML_GLOBAL_COMPILE_OPTIONS}")
 add_link_options("${SRCML_GLOBAL_LINK_OPTIONS}")
 
+# if(BUILD_LIBSRCML)
+    add_subdirectory(parser)
+    add_subdirectory(libsrcml)
+# endif()
 add_subdirectory(client)
-add_subdirectory(parser)
-add_subdirectory(libsrcml)
