Turn off single libsrcml.o file for MSVC

--- a/src/libsrcml/CMakeLists.txt
+++ b/src/libsrcml/CMakeLists.txt
@@ -31,15 +31,19 @@ target_link_libraries(libsrcml PRIVATE LibXml2::LibXml2 Iconv::Iconv LibXslt::Li
 
 # Merge all object code into one object file to build static library from
 # Use this to build static library as it 1) hides filenames 2) hides symbols that are internal only
-set(LIBSRCML_OBJECT_FILENAME libsrcml${CMAKE_CXX_OUTPUT_EXTENSION})
-add_custom_command(
-  OUTPUT ${LIBSRCML_OBJECT_FILENAME}
-  COMMAND ld -r $<TARGET_OBJECTS:libsrcml> $<TARGET_OBJECTS:parser> $<TARGET_OBJECTS:antlr> -o ${LIBSRCML_OBJECT_FILENAME}
-  DEPENDS libsrcml parser antlr
-  COMMAND_EXPAND_LISTS
-)
+if(NOT MSVC)
+    set(LIBSRCML_OBJECT_FILENAME libsrcml${CMAKE_CXX_OUTPUT_EXTENSION})
+    add_custom_command(
+      OUTPUT ${LIBSRCML_OBJECT_FILENAME}
+      COMMAND ld -r $<TARGET_OBJECTS:libsrcml> $<TARGET_OBJECTS:parser> $<TARGET_OBJECTS:antlr> -o ${LIBSRCML_OBJECT_FILENAME}
+      DEPENDS libsrcml parser antlr
+      COMMAND_EXPAND_LISTS
+    )
 
-add_library(libsrcml_static STATIC libsrcml.o)
+    add_library(libsrcml_static STATIC libsrcml.o)
+else()
+    add_library(libsrcml_static STATIC $<TARGET_OBJECTS:libsrcml> $<TARGET_OBJECTS:parser> $<TARGET_OBJECTS:antlr> )
+endif()
 set_target_properties(libsrcml_static PROPERTIES
     ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin
     POSITION_INDEPENDENT_CODE ON
