Tweak windows build settings

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,9 +1,9 @@
 # SPDX-License-Identifier: GPL-3.0-only
 ##
 # @file CMakeLists.txt
-# 
+#
 # @copyright Copyright (C) 2013-2023 srcML, LLC. (www.srcML.org)
-# 
+#
 # CMake files for building from source
 
 set(CMAKE_CXX_STANDARD 17)
@@ -20,7 +20,7 @@ option(BUILD_SHARED_LIBS "Build using shared libraries" ON)
 option(BUILD_LIBSRCML "Build (and potentially install) libsrcml" ON)
 
 # Exeternally defined compile and link options
-add_compile_options("${SRCML_GLOBAL_COMPILE_OPTIONS}")
+add_compile_options(${SRCML_GLOBAL_COMPILE_OPTIONS})
 add_link_options("${SRCML_GLOBAL_LINK_OPTIONS}")
 
 # if(BUILD_LIBSRCML)
