Rename nsis installer files to WIX and remove old nsis files

--- a/package/CMakeLists.txt
+++ b/package/CMakeLists.txt
@@ -101,7 +101,7 @@ if (CPACK_GENERATOR MATCHES "RPM")
 elseif (CPACK_GENERATOR MATCHES "DEB")
     include(debian.cmake)
 elseif (WIN32)
-    include(nsis.cmake)
+    include(wix.cmake)
 elseif (APPLE)
     include(macos.cmake)
 endif()
