Copy presets to build directory

--- a/package/CMakeLists.txt
+++ b/package/CMakeLists.txt
@@ -6,6 +6,14 @@
 #
 # CPack configuration for all installers
 
+# Copy preset file to build directory
+configure_file(${CMAKE_SOURCE_DIR}/CMakePresets.json ${CMAKE_BINARY_DIR} COPYONLY)
+
+# Copy user preset file to the build directory if it exists
+if(EXISTS ${CMAKE_SOURCE_DIR}/CMakeUserPresets.json)
+    configure_file(${CMAKE_SOURCE_DIR}/CMakeUserPresets.json ${CMAKE_BINARY_DIR} COPYONLY)
+endif()
+
 # especially for archives
 set(CPACK_COMPONENTS_GROUPING "ONE_PER_GROUP")
 
