--- a/package/CPack.distribution.dist.in
+++ b/package/CPack.distribution.dist.in
@@ -3,8 +3,8 @@
     <title>@CPACK_PACKAGE_NAME@</title>
     <welcome file="@CPACK_RESOURCE_FILE_WELCOME_NOPATH@" mime_type="text/html"/>
     <license file="@CPACK_RESOURCE_FILE_LICENSE_NOPATH@"/>
-    <background file="background.png"/>
+    <background file="background.png" mime_type="image/png"/>
     <conclusion file="installed.html" mime-type="text/html"/>
     <options allow-external-scripts="no" customize="always" rootVolumeOnly="false"></options>
-    @CPACK_PACKAGEMAKER_CHOICES@
+@CPACK_APPLE_PKG_INSTALLER_CONTENT@
 </installer-gui-script>
