--- a/src/libsrcml/CMakeLists.txt
+++ b/src/libsrcml/CMakeLists.txt
@@ -169,9 +169,9 @@ endif()
 if(DISTRO AND DISTRO MATCHES "Ubuntu")
     find_program(LDCONFIG ldconfig)
     if(LDCONFIG)
-        install(CODE "message(STATUS \"Running: ldconfig\")" COMPONENT HIDE)
-        install(CODE "execute_process(COMMAND ${LDCONFIG})" COMPONENT HIDE)
+        install(CODE "message(STATUS \"Running: ldconfig\")" COMPONENT LOCAL)
+        install(CODE "execute_process(COMMAND ${LDCONFIG})" COMPONENT LOCAL)
     else()
-        install(CODE "message(NOTICE \"   NOTE: Unable to run ldconfig. Library libsrcml.so may not be found.\n   Suggest running ldconfig manually.\")" COMPONENT HIDE)
+        install(CODE "message(NOTICE \"   NOTE: Unable to run ldconfig. Library libsrcml.so may not be found.\n   Suggest running ldconfig manually.\")" COMPONENT LOCAL)
     endif()
 endif()
