Fix universal binary problem on macOS with ld -r

--- a/src/libsrcml/CMakeLists.txt
+++ b/src/libsrcml/CMakeLists.txt
@@ -28,19 +28,33 @@ target_include_directories(libsrcml BEFORE PUBLIC $<BUILD_INTERFACE:${CMAKE_CURR
 target_link_libraries(libsrcml PRIVATE LibXml2::LibXml2 Iconv::Iconv LibXslt::LibXslt LibXslt::LibExslt parser)
 
 # Building static library for srcML
+message("CMAKE_OSX_ARCHITECTURES: ${CMAKE_OSX_ARCHITECTURES}")
 
 # Merge all object code into one object file to build static library from
 # Use this to build static library as it 1) hides filenames 2) hides symbols that are internal only
 if(NOT MSVC)
     set(LIBSRCML_OBJECT_FILENAME libsrcml${CMAKE_CXX_OUTPUT_EXTENSION})
-    add_custom_command(
-      OUTPUT ${LIBSRCML_OBJECT_FILENAME}
-      COMMAND ld -r $<TARGET_OBJECTS:libsrcml> $<TARGET_OBJECTS:parser> $<TARGET_OBJECTS:antlr> -o ${LIBSRCML_OBJECT_FILENAME}
-      DEPENDS libsrcml parser antlr
-      COMMAND_EXPAND_LISTS
-    )
 
-    add_library(libsrcml_static STATIC libsrcml.o)
+    if(NOT "${CMAKE_OSX_ARCHITECTURES}" STREQUAL "")
+        # Generate a single-object library for both architectures, then combine them into one
+        add_custom_command(
+          OUTPUT ${LIBSRCML_OBJECT_FILENAME}
+          COMMAND ld -r -arch arm64 $<TARGET_OBJECTS:parser> $<TARGET_OBJECTS:antlr> -o libsrcml.arm64.o
+          COMMAND ld -r -arch x86_64 $<TARGET_OBJECTS:parser> $<TARGET_OBJECTS:antlr> -o libsrcml.x86_64.o
+          COMMAND lipo -create libsrcml.arm64.o libsrcml.x86_64.o -output ${LIBSRCML_OBJECT_FILENAME}
+          DEPENDS libsrcml parser antlr
+          COMMAND_EXPAND_LISTS
+        )
+    else()
+        add_custom_command(
+          OUTPUT ${LIBSRCML_OBJECT_FILENAME}
+          COMMAND ld -r $<TARGET_OBJECTS:parser> $<TARGET_OBJECTS:antlr> -o ${LIBSRCML_OBJECT_FILENAME}
+          DEPENDS libsrcml parser antlr
+          COMMAND_EXPAND_LISTS
+        )
+    endif()
+
+    add_library(libsrcml_static STATIC ${LIBSRCML_OBJECT_FILENAME})
 else()
     add_library(libsrcml_static STATIC $<TARGET_OBJECTS:libsrcml> $<TARGET_OBJECTS:parser> $<TARGET_OBJECTS:antlr> )
 endif()
