--- a/doc/manpage/srcml.cfg
+++ b/doc/manpage/srcml.cfg
@@ -1,14 +1,15 @@
-## NAME
+% SRCML(1) srcml ${CLIENT_VERSION} | srcml
+
+# NAME
 
 **srcml** - Conversion of source code to/from the srcML format, querying and manipulation of srcML
 
-
-## SYNOPSIS
+# SYNOPSIS
 
 `srcml` \[[general-options\]][GENERAL OPTIONS] \[[srcML-options\]][CREATING SRCML] \[[transformations\]][TRANSFORMATIONS] \[[output-src-options\]][EXTRACTING SOURCE CODE] \[input\] \[output\]
 
 
-## DESCRIPTION
+# DESCRIPTION
 
 The program `srcml` supports the srcML format. The srcML format
 presents an XML view of source code for addressing, querying, and transformation.
@@ -29,7 +30,7 @@ Use of the character '-' in the place of an input file, or providing no input
 file, implies reading from standard input. A source-code language must be specified
 when source-code input is from standard input.
 
-## GENERAL OPTIONS
+# GENERAL OPTIONS
 
 `-${HELP_FLAG_SHORT}`, `--${HELP_FLAG_LONG}`
 : Output the help and exit.
@@ -45,13 +46,13 @@ a directory, or source-code archive (e.g., tar.gz).
 `-${QUIET_FLAG_SHORT}`, `--${QUIET_FLAG_LONG}`
 : Suppresses status messages.
 
-`-${OUTPUT_FLAG_SHORT}` <file>, `--${OUTPUT_FLAG_LONG}`=<file>
-: Write the output to <file>. By default, it writes to standard output.
+`-${OUTPUT_FLAG_SHORT}` _file_, `--${OUTPUT_FLAG_LONG}`=_file_
+: Write the output to _file_. By default, it writes to standard output.
 
-`-${JOBS_FLAG_SHORT}` <num>, `--${JOBS_FLAG_LONG}`=<num>
-: Allow up to <num> threads for source parsing. Default is 4.
+`-${JOBS_FLAG_SHORT}` _num_, `--${JOBS_FLAG_LONG}`=_num_
+: Allow up to _num_ threads for source parsing. Default is 4.
 
-## CREATING SRCML
+# CREATING SRCML
 
 The following options are to create srcML. The format of the
 input affects the format of the output unless otherwise specified.
@@ -59,21 +60,21 @@ If the input is source-code files, then the output is expected to be
 in srcML format. If the input is in srcML format, then the output is
 in source-code format.
 
-`-${TEXT_FLAG_SHORT}` <text>, `--${TEXT_FLAG_LONG}`=<text>
-: Input the <text> string as source code.
+`-${TEXT_FLAG_SHORT}` _text_, `--${TEXT_FLAG_LONG}`=_text_
+: Input the _text_ string as source code.
 Useful for short text input. Common escape sequences in C and echo are
 expanded, including \n, \t, \a, \b, \v, \e \xHH where H is 1 to 2 hex values,
 and \NNN and \0NNN where N is 1 to 3 octal digits.
 
-`--${FILES_FROM_LONG}`=<file>
-: Treat the input <file> as a list of source files.
+`--${FILES_FROM_LONG}`=_file_
+: Treat the input _file_ as a list of source files.
 Each file is separately translated and collectively stored into a
 single srcML archive. The list has a single filename on each line.
 Ignored lines include blank lines and lines that begin with the character '\#'.
 As with input and output files, using the character '-' in place of a file name takes the input
 list from standard input.
 
-`-${LANGUAGE_FLAG_SHORT}` <language>, `--${LANGUAGE_FLAG_LONG}`=<language>
+`-${LANGUAGE_FLAG_SHORT}` _language_, `--${LANGUAGE_FLAG_LONG}`=_language_
 : Set the programming language of the input source code. Allowable values are
 C, C++, C\#, and Java. The language affects parsing, the allowed
 markup, and what is considered a keyword. The value is also stored
@@ -88,22 +89,22 @@ program will skip that file. This allows you to run `srcml` on a
 project directory with source and non-source files, where `srcml`
 only parses files with supported extensions.
 
-`--${REGISTER_EXTENSION_FLAG_LONG}` <extension>=<language>
-: Set the file <extension> map to a given <language>. Note
+`--${REGISTER_EXTENSION_FLAG_LONG}` _extension_=_language_
+: Set the file _extension_ map to a given _language_. Note
 that the extensions do not contain the period character '.', e.g., `--register-ext "h=C++"`
 
 A common use is C++ files that use the .h extension for header
 files. By default, these are processed as C source-code files. This
 option can be used to override this behavior.
 
-`--${SRC_ENCODING_FLAG_LONG}`=<encoding>
-: Use the <encoding> when processing the input source-code file. The
+`--${SRC_ENCODING_FLAG_LONG}`=_encoding_
+: Use the _encoding_ when processing the input source-code file. The
 default is to try to automatically determine this when possible, i.e., ISO-8859-1 is assumed
 unless a non-character is detected. Encodings include "UTF-16", "ISO-10646-UCS-2",
 and "ISO-8859-1". On UNIX platforms, a full list of encodings can be obtained by using the command `iconv -l`.
 
-`--${EOL_FLAG_LONG}`=<eol>
-: Use the <eol> for output of source code. Allowable values are the default `auto`, 'UNIX' or linefeed `lf`,
+`--${EOL_FLAG_LONG}`=_eol_
+: Use the _eol_ for output of source code. Allowable values are the default `auto`, 'UNIX' or linefeed `lf`,
 carriage return `cr`, and 'Windows' or carriage return, linefeed `crlf`. In most cases the default
 `auto` is sufficient.
 
@@ -127,7 +128,7 @@ any namespaces or attributes on the archive root element, and is technically not
 : Output the XML inside of the srcML unit element. This is not valid XML as it contains no
 namespace declarations and does not necessarily have a single root element.
 
-### Examples
+## Examples
 
 srcml --text="a;" -l C++ --output-srcml-outer
 
@@ -150,7 +151,7 @@ ${TABS_FLAG}.
 "${SRCML_EXT_POSITION_NS_PREFIX_DEFAULT}" in the namespace
 "${SRCML_EXT_POSITION_NS_URL}", e.g., `<class pos:start="15,1" pos:end="25,2">`
 
-`--${TABS_FLAG}`=<tabsize>
+`--${TABS_FLAG}`=_tabsize_
 : Set the tab size. Default is 8. Use of this option automatically
 turns on the position attributes.
 
@@ -176,7 +177,7 @@ The default is to markup these regions.
 
 The following options control the format of the XML.
 
-`--${XML_ENCODING_FLAG_LONG}`=<encoding>
+`--${XML_ENCODING_FLAG_LONG}`=_encoding_
 : Use the encoding for the output srcML file. The
 default is UTF-8. Possible encodings can be obtained by using the
 command `iconv -l` on UNIX platforms. The encoding is stored on the XML declaration.
@@ -191,12 +192,12 @@ indicated in the srcML document by the declaration of the specific
 extension namespace. These flags make it easier to declare, and are
 an alternative way to turn on options by declaring the URL for an option.
 
-`--${XMLNS_FLAG}`=<url>
-: Set the <url> for the default namespace. The predefined URL is:
+`--${XMLNS_FLAG}`=_url_
+: Set the _url_ for the default namespace. The predefined URL is:
 
     `--${XMLNS_FLAG}=${SRCML_SRC_NS_URL}`
 
-`--${XMLNS_FLAG}:`<prefix>=<url>
+`--${XMLNS_FLAG}:`_prefix_=_url_
 : Set the namespace prefix PREFIX for the namespace URL.
 There is a set of standard URLs for the elements in srcML, each with a
 predefined prefix. The predefined URLs and prefixes are:
@@ -247,22 +248,22 @@ then exit.
 `--${SHOW_UNIT_COUNT_FLAG_LONG}`
 : Display the unit count and exit.
 
-`--${PREFIX_FLAG_LONG}`=<url>
-: Display a prefix given by a <url> and exit.
+`--${PREFIX_FLAG_LONG}`=_url_
+: Display a prefix given by a _url_ and exit.
 
 The following options allow the user to control the attributes:
 
-`-${FILENAME_FLAG_SHORT}` <filename>, `--${FILENAME_FLAG_LONG}`=<filename>
+`-${FILENAME_FLAG_SHORT}` _filename_, `--${FILENAME_FLAG_LONG}`=_filename_
 : The value of the filename attribute is typically obtained from the input
 filename. This option allows you to specify a different filename for
 standard input or where the filename is not contained in the input path.
 
-`--${URL_FLAG_LONG}`=<url>
+`--${URL_FLAG_LONG}`=_url_
 : The url attribute on the root element can be defined. This is purely
 descriptive and has no interpretation by `srcml`. It is useful for specifying
 a directory or defining the source protocol.
 
-`-${SRCVERSION_FLAG_SHORT}` <version>, `--${SRCVERSION_FLAG_LONG}`=<version>
+`-${SRCVERSION_FLAG_SHORT}` _version_, `--${SRCVERSION_FLAG_LONG}`=_version_
 : Set the value of the attribute version to version. This is a
 purely-descriptive attribute, where the value has no interpretation by
 `srcml`. The attribute is applied to the root element, and in the case
@@ -278,7 +279,7 @@ working with srcML archives.
 time of the input source-code archive. This is the
 last modified time based on the archive files.
 
-### EXAMPLES
+## EXAMPLES
 
 srcml input.cpp
 : Create a srcML unit from input.cpp, using C++ parsing rules,
@@ -306,18 +307,18 @@ rules as well as C++ parsing rules for preprocessor directives.
 The following describe options that are only applicable for when
 the output is in source-code format.
 
-`-${UNIT_OPTION_SHORT}` <n>, `--${UNIT_OPTION_LONG}` <n>
-: Extract individual <n>th unit from srcML archive.
+`-${UNIT_OPTION_SHORT}` _n_, `--${UNIT_OPTION_LONG}` _n_
+: Extract individual _n_-th unit from srcML archive.
 
 `-${OUTPUT_SRC_FLAG_SHORT}`, `--${OUTPUT_SRC_FLAG_LONG}`
 : Output source code. This is the default when the input
 is in srcML.
 
-`--${TO_DIR_FLAG_LONG}`=<directory>
+`--${TO_DIR_FLAG_LONG}`=_directory_
 : Extract all files from srcML and create them in the file system at
-<directory>.
+_directory>_
 
-### EXAMPLES
+## EXAMPLES
 
 srcml dir/ -${OUTPUT_FLAG_SHORT} dir.xml
 : Create a srcML archive from all files contained in the dir directory, using
@@ -330,8 +331,8 @@ directory as the root directory.
 
 ## TRANSFORMATIONS
 
-`--${XPATH_OPTION_LONG}=<expression>`
-: Query each individual unit using the Xpath <expression>.
+`--${XPATH_OPTION_LONG}=_expression_`
+: Query each individual unit using the Xpath _expression_.
 
 The default prefix cannot be used in Xpath expressions. Element names must have a prefix, e.g., `src`, `cpp`, etc. If path from the root is not given, i.e., '//...' or '/src:unit/..', context is assumed to the '//', e.g., 'src:name' is the same as '//src:name', and 'count(src:name)' is the same as 'count(//src:name)'. 
 
@@ -344,17 +345,17 @@ must be declared with the option `--${XMLNS_FLAG}:`.
 `--${ELEMENT_LONG}` _prefix:name_
 : Wrap every Xpath expression result with an element of the form _prefix:name_. May be mixed with `--${ATTRIBUTE_LONG}`.
 
-`--${XSLT_LONG}` <file|url>
-: Apply a transformation from an XSLT <file> or <url> to each individual unit.
+`--${XSLT_LONG}` _file_|_url_
+: Apply a transformation from an XSLT _file_ or _url_ to each individual unit.
 
-`--${XSLT_PARAM}` _name_="<value>"
-: Pass the string parameter _name_ with UTF-8 encoded string <value> to the XSLT program
+`--${XSLT_PARAM}` _name_="_value_"
+: Pass the string parameter _name_ with UTF-8 encoded string _value_ to the XSLT program
 
-`--${RELAXNG_OPTION_LONG}`=<file|url>
-: Output individual units that match the RELAXNG <file> or <url>.
+`--${RELAXNG_OPTION_LONG}`=_file_|_url_
+: Output individual units that match the RELAXNG _file_ or _url_.
 
 
-### EXAMPLES
+## EXAMPLES
 
 srcml a.cpp --${XPATH_OPTION_LONG}="//src:name" --${ATTRIBUTE_LONG}="q:foo=test" --${XMLNS_FLAG}:q=mysite.net
 
@@ -367,9 +368,11 @@ of each unit in the archive to standard out.
 
 ## RETURN STATUS
 
-* ${STATUS_SUCCESS}: Normal
-* ${STATUS_ERROR}: General error
-* ${STATUS_INTERNAL_ERROR}: Internal error
+${STATUS_SUCCESS}: Normal
+
+${STATUS_ERROR}: General error
+
+${STATUS_INTERNAL_ERROR}: Internal error
 
 ## CAVEATS
 
@@ -396,7 +399,7 @@ and Heather Michaud.
 
 ## COPYRIGHT
 
-Copyright (C) 2013-2019 srcML, LLC. (www.srcML.org)
+Copyright (C) 2013-2023 srcML, LLC. (www.srcML.org)
 
 The srcML Toolkit is free software; you can redistribute it and/or modify
 it under the terms of the GNU General Public License as published by
