Change default behavior of null-separated to newline with new null-separated options

--- a/doc/manpage/CMakeLists.txt
+++ b/doc/manpage/CMakeLists.txt
@@ -122,6 +122,9 @@ set(STATUS_ERROR "1")
 set(STATUS_INTERNAL_ERROR "2")
 set(PRETTY_FLAG_LONG "pretty")
 
+set(NULL_SEPARATOR_LONG "print0")
+set(NULL_SEPARATOR_SHORT "Z")
+
 # Custom commands for creating things using pandoc
 configure_file(${CMAKE_SOURCE_DIR}/doc/manpage/srcml.cfg ${CMAKE_BINARY_DIR}/srcml.md)
 add_custom_command(OUTPUT ${CMAKE_BINARY_DIR}/srcml.1
