--- a/doc/manpage/srcml.cfg
+++ b/doc/manpage/srcml.cfg
@@ -318,6 +318,9 @@ is in srcML.
 : Extract all files from srcML and create them in the file system at
 _directory>_
 
+`-${NULL_SEPARATOR_SHORT}`, `--${NULL_SEPARATOR_LONG}`
+: Separates each source code unit with an ASCII NULL ('\0')
+
 ## EXAMPLES
 
 srcml dir/ -${OUTPUT_FLAG_SHORT} dir.xml
