Add start of finish dialog for wxs

--- a/package/WIX.template.in
+++ b/package/WIX.template.in
@@ -42,5 +42,9 @@
 
         <?include "properties.wxi"?>
         <?include "product_fragment.wxi"?>
+
+        <Property Id="WIXUI_INSTALLDIR" Value="INSTALLFOLDER" />
+        <UIRef Id="WixUI_InstallDir" />
+
     </Product>
 </Wix>
